CORE-18231: Fixing alignment for promotion icns.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-cart/component/_spc-dynamic-promotions.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-cart/component/_spc-dynamic-promotions.scss
@@ -90,7 +90,7 @@
     min-height: 3.25rem;
     font-family: $alshaya-bold;
     display: inline-flex;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
 
     &:last-child {
